Made form button center-aligned. Fixed start date.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -578,3 +578,7 @@ textarea {
         font-size: 0.875em;
     }
 }
+
+.submit {
+    text-align: center;
+}
